test/sema/mismatching-argument-label-init.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct X: Copyable {
    init(a: int) { }
}

def main() {
    // CHECK: [[@LINE+1]]:15: error: invalid argument name 'bar' for parameter 'a'
    var x = X(bar: 5);
}
